--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
         </div>
         <grid-grid class="glass">
 
-            <grid-item-1>
+            <text-areas>
                 <label><span>Foreign Language :</span><textarea class="texty" id="text-area" placeholder="Enter vocabulary..."></textarea></label>
 
                 <label><span>Your Language :</span><textarea class="texty" id="definition-area" placeholder="Enter definition..."></textarea></label>
-            </grid-item-1>
+            </text-areas>
             
             <button-container>
                 <div class="button-wrapper">
