--- a/index.html
+++ b/index.html
@@ -13,14 +13,21 @@
                 <h3 class="current-mode">Current Mode: <span id="mode-name"></span></h3>
                 <h2>Pick Mode</h2>
                 <p>Each mode represents different modifiers for the general Flash Card mode.</p>
+                <p>Hover over buttons for description of the mode.</p>
                 <container-for-modes>
                     <button class="activator-buttons" id="cover">Cover Mode</button>
                     <button class="activator-buttons" id="casual">Casual Mode</button>
                     <button class="activator-buttons" id="timed">Timed Mode</button>
                     <button class="activator-buttons" id="memo-mode">Memorization Mode</button>
                 </container-for-modes>
+                <div class="modal-explanation">
+                    <button class="activator-buttons" id="close-modal-explanation"><img src="/assets/leftArrow.png" alt="arrow pointer"></button>
+                    <h2>.</h2>
+                    <p>.</p>
+                </div>
             </div>
         </div>
+
         <grid-grid class="glass">
 
             <text-areas>
