--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
                 </container-for-modes>
                 <div class="modal-explanation">
                     <button class="activator-buttons" id="close-modal-explanation"><img src="/assets/leftArrow.png" alt="arrow pointer"></button>
-                    <h2>.</h2>
-                    <p>.</p>
+                    <h2 id="current-mode-explain-name"></h2>
+                    <p id="explaination-area">.</p>
                 </div>
             </div>
         </div>
