--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
         <grid-grid class="glass">
 
             <text-areas>
-                <label><span>Foreign Language :</span><textarea class="texty" id="text-area" placeholder="Enter vocabulary..."></textarea></label>
+                <label><span>Foreign Language :</span><input id="text-area" placeholder="Enter vocabulary..."></label>
 
-                <label><span>Your Language :</span><textarea class="texty" id="definition-area" placeholder="Enter definition..."></textarea></label>
+                <label><span>Your Language :</span><input id="definition-area" placeholder="Enter definition..."></label>
             </text-areas>
             
             <button-container>
@@ -54,6 +54,7 @@
         </grid-grid>
 
     </body>
+    <script src="https://code.jquery.com/jquery-3.7.1.js"></script>
     <script type="module" src="constants.js"></script>
     <script type="module" src="script.js"></script>
 </html>
