--- a/index.html
+++ b/index.html
@@ -28,8 +28,12 @@
             </div>
 
             <flash-cards>
+                <toggle-style-modes>
+                    <input id = "inputbutton" type="checkbox" checked style="--s:35px">
+                    <label for="inputbutton">Toggle View</label>
+                </toggle-style-modes>
                 <modal-text>
-                    <h2><span class="mode-name"></span></h2>
+                    <h2 class="mode-name"></h2>
                     <p>cool</p>
                 </modal-text>
                 <modal-container>
