--- a/index.html
+++ b/index.html
@@ -33,10 +33,12 @@
                 <toggle-style-modes>
                     <input id = "inputbutton" type="checkbox" checked style="--s:35px">
                     <label class = "inputbutton" for="inputbutton">Toggle View</label>
+                    <button-wrapper>
+                        <button class="activator-buttons" id="close-flash-card">X</button>
+                    </button-wrapper>
                 </toggle-style-modes>
                 <modal-text>
                     <h2 class="mode-name"></h2>
-                    <p>cool</p>
                 </modal-text>
                 <modal-container>
                 </modal-container>
