play mode fixed

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Quiz yourself | Flash Cards</title>
   </head>
   <body>
-    <div id="overlay">
+    <overlay>
       <div class="modal">
         <button class="activator-buttons" id="close-modal">X</button>
         <h3 class="current-mode">
@@ -51,7 +51,7 @@
         </modal-text>
         <modal-container> </modal-container>
       </flash-cards>
-    </div>
+    </overlay>
 
     <main-panel class="glass">
       <text-areas>
