--- a/index.html
+++ b/index.html
@@ -39,29 +39,15 @@
       </div>
 
       <flash-cards>
-        <!-- <toggle-style-modes>
-          <input id="inputbutton" type="checkbox" checked style="--s: 35px" />
-          <label class="inputbutton" for="inputbutton">Toggle View</label>
-          <button-wrapper>
-            <button class="activator-buttons" id="close-flash-card">X</button>
-          </button-wrapper>
-        </toggle-style-modes> -->
         <modal-text>
           <h2 class="mode-name"></h2>
         </modal-text>
         <flash-card-container>
           <!-- cards -->
 
-          <a class="prev" onclick="plusCards(-1)">&#10094;</a>
-          <a class="next" onclick="plusCards(1)">&#10095;</a>
+          <a class="prev">&#10094;</a>
+          <a class="next">&#10095;</a>
         </flash-card-container>
-        <br />
-
-        <div class="dot-container" style="text-align: center">
-          <span class="dot" onclick="currentCards(1)"></span>
-          <span class="dot" onclick="currentCards(2)"></span>
-          <span class="dot" onclick="currentCards(3)"></span>
-        </div>
       </flash-cards>
     </overlay>
 
