--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
 
       <flash-cards>
         <modal-text>
+          <button-close-flash-cards>Close</button-close-flash-cards>
           <h2 class="mode-name"></h2>
         </modal-text>
         <flash-card-container>
