--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="/styles/style.css" />
     <link rel="stylesheet" href="/styles/class.css" />
     <link rel="stylesheet" href="/styles/animations.css" />
+    <link rel="stylesheet" href="/styles/mediaQuery.css" />
     <title>Quiz yourself | Flash Cards</title>
   </head>
   <body>
