--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
       <flash-cards>
         <modal-text>
           <button-close-flash-cards>Close</button-close-flash-cards>
+          <button class="randomize-cards">Re-Shuffle</button>
           <h2 class="mode-name"></h2>
         </modal-text>
         <flash-card-container>
