trying to fix bugs!

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </container-for-modes>
         <div class="modal-explanation">
           <button class="activator-buttons" id="close-modal-explanation">
-            <img src="/assets/leftArrow.png" alt="arrow pointer" />
+            &#10094;
           </button>
           <h2 id="current-mode-explain-name"></h2>
           <p id="explaination-area">.</p>
@@ -42,8 +42,9 @@
       <flash-cards>
         <modal-text>
           <button-close-flash-cards>Close</button-close-flash-cards>
-          <button class="randomize-cards">Re-Shuffle</button>
           <h2 class="mode-name"></h2>
+          <sort-words>Sort</sort-words>
+          <button class="randomize-cards">Shuffle</button>
         </modal-text>
         <flash-card-container>
           <!-- cards -->
@@ -87,6 +88,7 @@
       </button-container>
 
       <word-bank>
+        <shuffle-words>Shuffle Words</shuffle-words>
         <h2>Word Bank</h2>
         <p>Clicking a specific word WILL remove it.</p>
         <div id="words-container"></div>
