check point! clean-up

--- a/index.html
+++ b/index.html
@@ -46,12 +46,11 @@
           <sort-words>Sort</sort-words>
           <button class="randomize-cards">Shuffle</button>
         </modal-text>
-        <flash-card-container>
-          <!-- cards -->
-
+        <flash-card-container></flash-card-container>
+        <arrow-container>
           <a class="prev">&#10094;</a>
           <a class="next">&#10095;</a>
-        </flash-card-container>
+        </arrow-container>
       </flash-cards>
     </overlay>
 
