--- a/index.html
+++ b/index.html
@@ -43,7 +43,6 @@
         <modal-text>
           <button-close-flash-cards>Close</button-close-flash-cards>
           <h2 class="mode-name"></h2>
-          <sort-words>Sort</sort-words>
           <button class="randomize-cards">Shuffle</button>
         </modal-text>
         <flash-card-container></flash-card-container>
@@ -87,7 +86,8 @@
       </button-container>
 
       <word-bank>
-        <shuffle-words>Shuffle Words</shuffle-words>
+        <shuffle-words>Shuffle</shuffle-words>
+        <sort-words>Sort</sort-words>
         <h2>Word Bank</h2>
         <p>Clicking a specific word WILL remove it.</p>
         <div id="words-container"></div>
