--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <overlay>
       <div class="modal">
-        <button class="activator-buttons" id="close-modal">X</button>
+        <button class="activator-buttons" id="close-modal">&#9747;</button>
         <h3 class="current-mode">
           Current Mode: <span class="mode-name"></span>
         </h3>
@@ -32,7 +32,7 @@
         </container-for-modes>
         <div class="modal-explanation">
           <button class="activator-buttons" id="close-modal-explanation">
-            &#10094;
+            &#9747;
           </button>
           <h2 id="current-mode-explain-name"></h2>
           <p id="explaination-area">.</p>
@@ -41,9 +41,9 @@
 
       <flash-cards>
         <modal-text>
-          <button-close-flash-cards>Close</button-close-flash-cards>
           <h2 class="mode-name"></h2>
-          <button class="randomize-cards">Shuffle</button>
+          <button-close-flash-cards>X</button-close-flash-cards>
+          <button class="randomize-cards">&#8634;</button>
         </modal-text>
         <flash-card-container></flash-card-container>
         <arrow-container>
