funny & broken shuffle button

--- a/index.html
+++ b/index.html
@@ -42,7 +42,9 @@
       <flash-cards>
         <modal-text>
           <h2 class="mode-name"></h2>
-          <button-close-flash-cards>X</button-close-flash-cards>
+          <button-close-flash-cards class="activator-buttons"
+            >X</button-close-flash-cards
+          >
           <button class="randomize-cards">&#8634;</button>
         </modal-text>
         <flash-card-container></flash-card-container>
