--- a/index.html
+++ b/index.html
@@ -40,14 +40,19 @@
       </div>
 
       <flash-cards>
-        <modal-text>
-          <h2 class="mode-name"></h2>
+        <button-panel>
+          <h2>control panel</h2>
+          <button class="randomize-cards">&#8634;</button>
           <button-close-flash-cards class="activator-buttons"
             >X</button-close-flash-cards
           >
-          <button class="randomize-cards">&#8634;</button>
+        </button-panel>
+        <modal-text>
+          <h2 class="mode-name"></h2>
         </modal-text>
+
         <flash-card-container></flash-card-container>
+
         <arrow-container>
           <a class="prev">&#10094;</a>
           <a class="next">&#10095;</a>
