--- a/index.html
+++ b/index.html
@@ -68,9 +68,13 @@
             <button class="activator-buttons" id="input-vocab">&#43;</button>
             <button class="activator-buttons" id="remove-one">&#8722;</button>
             <button class="activator-buttons" id="remove-all">&#128465;</button>
-            <shuffle-words>Shuffle</shuffle-words>
-            <sort-words>Sort</sort-words>
-            <button class="activator-buttons" id="pick-mode">Pick Mode</button>
+            <button class="activator-buttons shuffle-words" id="shuffle-words">
+              Shuffle
+            </button>
+            <button class="activator-buttons sort-words" id="sort-words">
+              Sort
+            </button>
+            <button class="activator-buttons" id="pick-mode">Pick</button>
           </button-container>
         </content>
       </mini-panel>
