--- a/index.html
+++ b/index.html
@@ -67,7 +67,8 @@
     <main-panel>
       <mini-panel class="glass">
         <content>
-          <h2>Control Panel</h2>
+          <h2>Control</h2>
+          <p>Panel</p>
           <button-container>
             <button class="activator-buttons" id="input-vocab">&#43;</button>
             <button class="activator-buttons" id="remove-one">&#8722;</button>
