Complete Ui overhaul (Main panel complete)

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     </overlay>
 
     <main-panel>
-      <mini-panel class="glass">
+      <btn-panel>
         <content>
           <h2>Control</h2>
           <p>Panel</p>
@@ -99,33 +99,37 @@
             </button>
           </button-container>
         </content>
-      </mini-panel>
+      </btn-panel>
 
-      <mini-panel-1 class="glass">
-        <text-areas>
-          <label
-            ><span>Foreign Language</span
-            ><input
-              autocomplete="off"
-              id="text-area"
-              placeholder="Enter vocabulary"
-          /></label>
+      <txtarea-panel>
+        <input-panel>
+          <text-areas>
+            <label
+              ><span>Foreign Language</span
+              ><input
+                autocomplete="off"
+                id="text-area"
+                placeholder="Vocabulary"
+            /></label>
 
-          <label
-            ><span>Your Language</span
-            ><input
-              autocomplete="off"
-              id="definition-area"
-              placeholder="Enter definition"
-          /></label>
-        </text-areas>
+            <label
+              ><span>Your Language</span
+              ><input
+                autocomplete="off"
+                id="definition-area"
+                placeholder="Definition"
+            /></label>
+          </text-areas>
+        </input-panel>
 
-        <word-bank>
-          <h2>Word Bank</h2>
-          <p>Clicking a specific word WILL remove it.</p>
-          <div id="words-container"></div>
-        </word-bank>
-      </mini-panel-1>
+        <word-panel>
+          <word-bank>
+            <h2>Word Bank</h2>
+            <p>Clicking a specific word WILL remove it.</p>
+            <div id="words-container"></div>
+          </word-bank>
+        </word-panel>
+      </txtarea-panel>
     </main-panel>
   </body>
   <script src="https://code.jquery.com/jquery-3.7.1.js"></script>
