Ui overhaul part 1 finished

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
           <word-bank>
             <h2>Word Bank</h2>
             <p>Clicking a specific word WILL remove it.</p>
-            <div id="words-container"></div>
+            <words-container></words-container>
           </word-bank>
         </word-panel>
       </txtarea-panel>
