--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <link rel="stylesheet" href="/styles/style.css" />
     <link rel="stylesheet" href="/styles/class.css" />
     <link rel="stylesheet" href="/styles/animations.css" />
-    <link rel="stylesheet" href="/styles/mediaQuery.css" />
+    <link rel="stylesheet" media="screen" href="/styles/mediaQuery.css" />
     <title>Quiz yourself | Flash Cards</title>
   </head>
   <body>
